# CrewAI--Learn

./: .gitignore  README.md  agents.py  crew.py  llm.py  requirements.txt  tasks.py  tools.py
blog_writing/: pyproject.toml
blog_writing/src/blog_writing/: crew.py  main.py
blog_writing/src/blog_writing/config/: agents.yaml
with_crewai_create/src/blog_writing/: crew.py  main.py
with_crewai_create/src/blog_writing/config/: agents.yaml  tasks.yaml
