[tool.poetry]
name = "blog_writing"
version = "0.1.0"
description = "blog_writing using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
blog_writing = "blog_writing.main:run"
run_crew = "blog_writing.main:run"
train = "blog_writing.main:train"
replay = "blog_writing.main:replay"
test = "blog_writing.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
